[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/Player/PngsFiles/Projectiles_UI.png" type="Texture" id=1]
[ext_resource path="res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://PlayerHolder/Player_customize.gd" type="Script" id=3]
[ext_resource path="res://Godot-Fontpack/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/poco/Poco.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 50
use_mipmaps = true
extra_spacing_top = -18
extra_spacing_bottom = 2
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.25098, 0.980392, 0.333333, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.25098, 0.980392, 0.333333, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.278431, 0.576471, 1, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0352941, 0.27451, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.25098, 0.980392, 0.333333, 1 )

[sub_resource type="DynamicFont" id=6]
size = 50
use_mipmaps = true
extra_spacing_top = -18
extra_spacing_bottom = 2
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.203922, 0.960784, 0.533333, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_right = 100
corner_radius_bottom_right = 4

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.580392, 0.372549, 0.0392157, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_right = 100
corner_radius_bottom_right = 4

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 1028.0
margin_bottom = 603.0

[node name="Panel" type="Panel" parent="Control"]
modulate = Color( 1, 0.866667, 0, 1 )
margin_right = 1030.0
margin_bottom = 608.0

[node name="Weapon" type="Sprite" parent="Control"]
position = Vector2( 424, 92 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 4

[node name="ScrollContaiiner" type="ScrollContainer" parent="Control"]
margin_left = 7.0
margin_top = 10.0
margin_right = 357.0
margin_bottom = 529.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ScrollContaiiner"]
margin_right = 350.0
margin_bottom = 519.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SingleLime" type="Button" parent="Control/ScrollContaiiner/VBoxContainer"]
margin_right = 350.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Single Lime"

[node name="TripleDime" type="Button" parent="Control/ScrollContaiiner/VBoxContainer"]
margin_top = 74.0
margin_right = 350.0
margin_bottom = 145.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Triple Dime"

[node name="BubbleLubble" type="Button" parent="Control/ScrollContaiiner/VBoxContainer"]
margin_top = 149.0
margin_right = 350.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Bubble Lubble"

[node name="BladeGloop" type="Button" parent="Control/ScrollContaiiner/VBoxContainer"]
margin_top = 224.0
margin_right = 350.0
margin_bottom = 294.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Blade Gloop"

[node name="ChargeFloop" type="Button" parent="Control/ScrollContaiiner/VBoxContainer"]
margin_top = 298.0
margin_right = 350.0
margin_bottom = 369.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Charge Snoot"

[node name="BoomaOoze" type="Button" parent="Control/ScrollContaiiner/VBoxContainer"]
margin_top = 373.0
margin_right = 350.0
margin_bottom = 444.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "BoomaOoze"

[node name="muckDirect" type="Button" parent="Control/ScrollContaiiner/VBoxContainer"]
margin_top = 448.0
margin_right = 350.0
margin_bottom = 519.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "MuckDirect"

[node name="Stats" type="Label" parent="Control"]
margin_left = 367.0
margin_top = 184.0
margin_right = 1014.0
margin_bottom = 518.0
custom_fonts/font = SubResource( 6 )
text = "Dmg: 4

Ammo: 4

CoolDown: 4"
autowrap = true

[node name="Flavor" type="Label" parent="Control"]
margin_left = 737.0
margin_top = 17.0
margin_right = 1009.0
margin_bottom = 484.0
custom_fonts/font = SubResource( 6 )
text = "A Classic Slime Staple Weapon shooting their own ... at their enemey hurting them
"
autowrap = true

[node name="EquipSlot1" type="Button" parent="Control"]
margin_left = 378.0
margin_top = 498.0
margin_right = 623.0
margin_bottom = 567.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Equip Slot1"

[node name="Currently" type="Label" parent="Control/EquipSlot1"]
margin_left = 7.0
margin_top = 65.0
margin_right = 239.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 4 )
text = "Bubble Lubble"
clip_text = true

[node name="EquipSlot2" type="Button" parent="Control"]
margin_left = 735.0
margin_top = 498.0
margin_right = 990.0
margin_bottom = 567.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Equip Slot2"

[node name="Currently" type="Label" parent="Control/EquipSlot2"]
margin_left = 7.0
margin_top = 65.0
margin_right = 239.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 4 )
text = "Triple Dime"
clip_text = true

[node name="Button" type="Button" parent="Control"]
margin_left = 4.0
margin_top = 540.0
margin_right = 310.0
margin_bottom = 598.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 9 )
custom_styles/normal = SubResource( 7 )
text = "Back To Menu"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 517, 302 )
current = true

[connection signal="pressed" from="Control/ScrollContaiiner/VBoxContainer/SingleLime" to="." method="_on_SingleLime_pressed"]
[connection signal="pressed" from="Control/ScrollContaiiner/VBoxContainer/TripleDime" to="." method="_on_TripleDime_pressed"]
[connection signal="pressed" from="Control/ScrollContaiiner/VBoxContainer/BubbleLubble" to="." method="_on_BubbleLubble_pressed"]
[connection signal="pressed" from="Control/ScrollContaiiner/VBoxContainer/BladeGloop" to="." method="_on_BladeGloop_pressed"]
[connection signal="pressed" from="Control/ScrollContaiiner/VBoxContainer/ChargeFloop" to="." method="_on_ChargeFloop_pressed"]
[connection signal="pressed" from="Control/ScrollContaiiner/VBoxContainer/BoomaOoze" to="." method="_on_BoomaOoze_pressed"]
[connection signal="pressed" from="Control/ScrollContaiiner/VBoxContainer/muckDirect" to="." method="_on_muckDirect_pressed"]
[connection signal="pressed" from="Control/EquipSlot1" to="." method="_on_EquipSlot1_pressed"]
[connection signal="pressed" from="Control/EquipSlot2" to="." method="_on_EquipSlot2_pressed"]
[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
